# ProGraphMSA

./: .gitignore  CMakeLists.txt  ProGraphMSA+TR.sh  ProGraphMSA.sh  README  build_ProGraphMSA.sh  trust2treks.py
src/: Alphabet.cpp  Alphabet.h  CMakeLists.txt  CSProfile.cpp  CSProfile.h  CleanedGraph.h  DateCompiled.h  DateCompiled.sh  DistanceFactory.cpp  DistanceFactory.h  DistanceFactoryAlign.cpp  DistanceFactoryAlign.h  DistanceFactoryAngle.h  DistanceFactoryML.cpp  DistanceFactoryML.h  DistanceFactoryPrealigned.h  Fasta.cpp  Fasta.h  FindRoot.cpp  FindRoot.h  GapParsimony.h  Graph.h  GraphAlign.h  LeastSquares.cpp  LeastSquares.h  Model.h  ModelFactory.cpp  ModelFactory.h  ModelFactoryCustom.h  ModelFactoryDarwin.cpp  ModelFactoryDarwin.h  ModelFactoryEcm.cpp  ModelFactoryEcm.h  ModelFactoryPlusF.h  ModelFactoryWag.cpp  ModelFactoryWag.h  NNLS.h  PhyTree.cpp  PhyTree.h  ProgressiveAlignment.cpp  (+22 more)
